Issue #15: Verify that all name/type attribute values correspond to names denoted context products
- Generated the json file in the new formate:
{
 "Product_Context": [
   {
   "name": "Name",
   "type": "Type",
   "lidvid": "ID::VER"
   },
   
- set the Registered Products with name and type.
- modified LidVid.java to handle name and type.